Se establece el feed, con algunos ejemplos estaticos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleMain.css">
+    <link rel="stylesheet" href="stylePublicacion.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -30,8 +31,47 @@
                 <a href="">Enlace 3</a>
             </nav>
         </div>
-        <div class="menubar central"></div>
-        <div class="menubar"></div>
+        <div class="menubar central">
+            <div class="feed">
+                <div class="publicacion">
+                    <div class="datos">
+                        <img src="img/user.svg" alt="">
+                        <div class="datosDescripcion">
+                            <div class="nombreUsuario">Jorge Ramirez</div>
+                            <div class="descripcionUsuario">Ingeniero Agronomo</div>
+                        </div>
+                        <div class="minutosDesdePublicacion">19 minutos</div>
+                    </div>
+                    <div class="imagen">
+                        <img src="img/imagenFeed.jpg" alt="">
+                    </div>
+                    <div class="feedback">
+                        <div class="meGusta">Me gusta</div>
+                        <div class="comentar">Comentarios</div>
+                        <div class="compartir">Compartir</div>
+                    </div>
+                </div>
+                <div class="publicacion">
+                    <div class="datos">
+                        <img src="img/user.svg" alt="">
+                        <div class="datosDescripcion">
+                            <div class="nombreUsuario">Jorge Ramirez</div>
+                            <div class="descripcionUsuario">Ingeniero Agronomo</div>
+                        </div>
+                        <div class="minutosDesdePublicacion">19 minutos</div>
+                    </div>
+                    <div class="imagen">
+                        <img src="img/imagenFeed2.jpg" alt="">
+                    </div>
+                    <div class="feedback">
+                        <div class="meGusta">Me gusta</div>
+                        <div class="comentar">Comentarios</div>
+                        <div class="compartir">Compartir</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="menubar derecha"></div>
     </div>
 </body>
 </html>
